mordenize code and upgrade to version 1.2.1